plotROC 1.3.2
--------------
Added support for new aesthetic options in plot_journal_roc and export_interactive_roc
  + colors
  + legends
  + line type changes
  + line width changes
  + axis labels

plotROC 1.3.1
-----------
  * fix multi plot with n.cuts = 0 bug

plotROC 1.3
------------
  * Added tests
  * Fixed vignette
  * Allow arbitrary class labels
  * Cleanup after interactive plot creation
  * Citation information

plotROC 1.2
-------------
  * New feature: click on interactive plot to display confidence region

plotROC 1.1
-------------
  * New feature: Support for multiple curves

 plotROC 1.0
----------------
  * Initial release