@@ -5,10 +5,10 @@
 \title{Plot multiple ROC curves}
 \usage{
 multi_ggroc(datalist, fpf_string = rep("FPF", length(datalist)),
-  tpf_string = rep("TPF", length(datalist)), label = NULL,
-  label.adj.x = rep(0, length(datalist)), label.adj.y = rep(0,
-  length(datalist)), label.angle = rep(45, length(datalist)),
-  plotmath = FALSE, xlabel = "False positive fraction",
+  tpf_string = rep("TPF", length(datalist)), c_string = rep("c",
+  length(datalist)), label = NULL, label.adj.x = rep(0, length(datalist)),
+  label.adj.y = rep(0, length(datalist)), label.angle = rep(45,
+  length(datalist)), plotmath = FALSE, xlabel = "False positive fraction",
   ylabel = "True positive fraction")
 }
 \arguments{
@@ -18,6 +18,8 @@ fractions and cutoffs}
 \item{fpf_string}{Column names identifying false positive fraction}
 
 \item{tpf_string}{Column names identifying true positive fraction}
+
+\item{c_string}{Column names identifying cutoff values}
 
 \item{label}{Optional vector of direct labels for the ROC curve, same length
 as \code{datalist}}
