@@ -4,15 +4,12 @@
 \alias{plot_journal_roc}
 \title{Plot an ROC curve for use in print}
 \usage{
-plot_journal_roc(ggroc_p, rocdata, font.size = 3, n.cuts = 20,
-  ci.at = NULL, opacity = 0.3, lty = NULL, color = NULL, lwd = NULL,
-  legend = FALSE)
+plot_journal_roc(ggroc_p, font.size = 3, n.cuts = 20, ci.at = NULL,
+  opacity = 0.3, lty = NULL, color = NULL, lwd = NULL, legend = FALSE)
 }
 \arguments{
 \item{ggroc_p}{An object as returned by \link{ggroc} or \link{multi_ggroc}.
 It can be modified with annotations, themes, etc.}
-
-\item{rocdata}{An object as returned by \link{calculate_roc}.}
 
 \item{font.size}{Integer that determines font size of cutoff labels}
 
