@@ -76,7 +76,7 @@ The `rocdata` is passed to the `ggroc` function with an optional label. This cre
 
 ```{r test-a, fig.keep='none', results = 'asis', echo = TRUE, fig.width=6, fig.height=6}
 myrocplot <- ggroc(rocdata, label = "Example")
-cat(export_interactive_roc(myrocplot, cutoffs = rocdata$c, font.size = "12px", prefix = "a", color = "red"))
+cat(export_interactive_roc(myrocplot, font.size = "12px", prefix = "a", color = "red"))
 ```
 
 That is an svg element. Try zooming in and you will see that it is scalable!
@@ -84,13 +84,13 @@ That is an svg element. Try zooming in and you will see that it is scalable!
 The same data.frame `rocdata` can be used to generate an interactive plot to view in Rstudio viewer or web browser.
 
 ```{r inter, eval = FALSE}
-plot_interactive_roc(myrocplot, cutoffs = rocdata$c)
+plot_interactive_roc(myrocplot)
 ```
 
 The same `ggroc` object that we called `myrocplot` can be used to generate an ROC plot suitable for use in print. It annotates the cutoff values and is completely in black and white. 
 
 ```{r print, fig.width = 6, fig.height = 6}
-plot_journal_roc(myrocplot, rocdata)
+plot_journal_roc(myrocplot)
 ```
 
 
@@ -104,13 +104,13 @@ For interactive plots, we use the `ci = TRUE` option in `calculcate_roc` and `gg
 
 rocdata <- calculate_roc(M.ex, D.ex, ci = TRUE)
 myrocplot <- ggroc(rocdata, label = "Example", ci = TRUE)
-cat(export_interactive_roc(myrocplot, cutoffs = rocdata$c, font.size = "12px", prefix = "aci", color = "red", lwd = 1))
+cat(export_interactive_roc(myrocplot, font.size = "12px", prefix = "aci", color = "red", lwd = 1))
 ```
 
 For use in print, pass a small list of locations at which to display the confidence regions. 
 
 ```{r printci, fig.width = 6, fig.height = 6}
-plot_journal_roc(myrocplot, rocdata, n.cuts = 10, ci.at = c(-.5, .5, 2.1))
+plot_journal_roc(myrocplot, n.cuts = 10, ci.at = c(-.5, .5, 2.1))
 ```
 
 ### Multiple ROC curves
@@ -128,11 +128,11 @@ rocplot <- multi_ggroc(datalist, label = c("M1", "M2", "M3"), plotmath = FALSE)
 This multi ggroc object can be passed to the `plot_journal_roc` and the `export_interactive_roc` functions, as desired. 
 
 ```{r multi, fig.width = 6, fig.height = 6}
-plot_journal_roc(rocplot, datalist, lty = rep(1, 3), color = c("blue", "green", "purple"), legend = TRUE)
+plot_journal_roc(rocplot, lty = rep(1, 3), color = c("blue", "green", "purple"), legend = TRUE)
 ```
 
 ```{r test-multi, fig.keep='none', results = 'asis', echo = TRUE, fig.width=6, fig.height=6}
-cat(export_interactive_roc(rocplot, cutoffs = lapply(datalist, function(d) d$c), 
+cat(export_interactive_roc(rocplot,  
                            font.size = "12px", prefix = "bmulti", 
                            color = c("red", "blue", "purple"), lty = rep(1, 3), legend = TRUE))
 ```
@@ -141,7 +141,7 @@ Labels can be added easily with the `label` option.
 
 ```{r multi2, fig.width = 6, fig.height = 6}
 rocplot <- multi_ggroc(datalist, label = c("M1", "M2", "M3"))
-plot_journal_roc(rocplot, datalist)
+plot_journal_roc(rocplot)
 ```
 
 ### Themes and annotations
@@ -152,11 +152,11 @@ plot_journal_roc(rocplot, datalist)
 library(ggthemes)
 myplot2 <- myrocplot + theme_igray() + ggtitle("Click me")
 
-cat(export_interactive_roc(myplot2, cutoffs = rocdata$c, font.size = "12px", prefix = "b"))
+cat(export_interactive_roc(myplot2, font.size = "12px", prefix = "b"))
 ```
 
 ```{r print2, fig.width = 6, fig.height = 6}
-plot_journal_roc(myrocplot, rocdata) + theme_igray() + ggtitle("My awesome new biomarker")
+plot_journal_roc(myrocplot) + theme_igray() + ggtitle("My awesome new biomarker")
 ```
 
 ### Other estimation methods
@@ -182,7 +182,7 @@ Then we can pass this data.frame to the `ggroc` function as before.
 
 ```{r binormal, fig.keep='none', results = 'asis', echo = TRUE, fig.width=6, fig.height=6}
 binorm_plot <- ggroc(binorm_rocdata, label = "Binormal")
-cat(export_interactive_roc(binorm_plot, cutoffs = c.ex, font.size = "12px", prefix = "bin"))
+cat(export_interactive_roc(binorm_plot, font.size = "12px", prefix = "bin"))
 ```
 
 
